# xsia_loco

./: .env.dev.production.example  .env.dev.tritunas.example  .env.dev.unpacti.example  .env.production.example  .env.tritunas.example  .env.unpacti.example  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  FEEDER_REQUEST_MIGRATION.md  README.md  TODO.md  catatan.md  data_problem.txt  doku.md  enable_binary_on_linux_redhat.md  error.json  example_payment.json  fix_data.md  fix_validation_issues.py  generate_cript.md  generate_script.md  server_setup_almalinux.md  steps_rpl.md  test_note.txt
.cargo/: config.toml
.github/workflows/: ci.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
caddy/: Caddyfile
config/: development.yaml  production.yaml  test.yaml
documentation/erd/: erd.dbml
examples/: playground.rs
json/: CombinedKelasKuliah.json  CombinedKurikulum.json  CombinedPenugasanDosen.json  DetailBiodataDosen.json  GetAktivitasMengajarDosen_w.json  GetBiodataMahasiswa.json  GetDetailKelasKuliah.json  GetDetailKelasKuliah_h.json  GetDetailKelasKuliah_mini.json  GetDetailKurikulum.json  GetDetailKurikulum_h.json  GetDetailMahasiswaLulusDO.json  GetDetailMahasiswaLulusDO_h.json  GetDetailMataKuliah.json  GetDetailMataKuliah_h.json  GetDetailMataKuliah_mh.json  GetDetailNilaiPerkuliahanKelas_mini.json  GetDetailPenugasanDosen_h.json  GetDetailPeriodePerkuliahan_h.json  GetDetailPerkuliahanMahasiswa_h.json  GetDetailPerkuliahanMahasiswa_mw.json  GetDosenPengajarKelasKuliah_h.json  GetDosenPengajarKelasKuliah_w.json  GetKRSMahasiswaMini.json  GetListDosen.json  GetListKelasKuliah_h.json  GetListKelasKuliah_m.json  GetListKelasKuliah_mini.json  GetListKomponenEvaluasiKelas.json  GetListKurikulum.json  GetListKurikulum_h.json  GetListMahasiswaLulusDO.json  GetListMataKuliah.json  GetListMataKuliah_h.json  GetListMataKuliah_m.json  GetListNilaiPerkuliahanKelas_h.json  GetListPenugasanDosen.json  GetListPenugasanSemuaDosen_h.json  GetListPeriodePerkuliahan_h.json  GetListPeriodePerkuliahan_mh.json  (+21 more)
migration/: Cargo.toml  xsia_rust_v1.sql  xsia_rust_v1_with_refs.dbml
migration/src/: lib.rs
nginx/: default.conf
public/: 404.html
public/cnn_training/: cnn_model_v19.burn  cnn_model_v19.mpk
src/: app.rs  lib.rs
src/common/: mod.rs  settings.rs
src/controllers/: mod.rs
src/initializers/: mod.rs  view_engine.rs  websocket.rs
(+2233 files in other folders)
